# AutoGoal-UFMG

./: .gitignore  .gitmodules  AVISO  README.md  compila.sh  manifest.xml  package.xml
Eletronica/Códigos/Comunicação/Client/: Client.ino
Eletronica/Códigos/Comunicação/ServerEmissor/: ServerEmissor.ino
Estrategia/: aliado.py  bola.py  campo.py  main.py  robo.py
Estratégia/:  vetor.py  aliado.py  main.py  numpy  rospy
Gazebo-Simulation/Bash/: run_vss.sh  run_vsstest.sh
Gazebo-Simulation/Materials/Scripts/: VSS_Player.material
Gazebo-Simulation/Models/ball/: ball.stl
Gazebo-Simulation/Models/campo/: model.config  model.sdf
Gazebo-Simulation/Models/vss_body/: model.config  model.sdf
Gazebo-Simulation/Worlds/: vss.world  vss_test.world
Script/: ReadMe.md  run  runProgression.md  setup  update
Visao/: Vision.py  run.py  sub_img_node.py
Visao/kinetic_sample_image_sub_py/: CMakeLists.txt  package.xml  setup.py
launch/: calibrate.launch  documentcao  setline.launch  vss.launch
msg/: pos_array.msg
script/: README.md  run  setup  update
src/: Subscriber.cpp  pause.cpp
src/arducom/: publisher.cpp  rs232.h
src/controle/: fut.h
src/detectObject/: multipleObjectTracking.hpp  readme.txt
src/estrategia/: estrategia.cpp  funcoes.cpp  posicao.cpp  posicao.h
src/im_converter/: main.cpp
src/interface/: ARMarker.h
src/setLine/: main.cpp  mainBackup.cpp
src/simulador/: carro.cpp  carro.h  fila.cpp  funcoes.hpp  orientacao.cpp  wavefront.cpp
vision/: auto.py  imageTopic.yaml  loadYaml.py  main.py  vision.py
vss/: CMakeLists.txt  GIT_TUTORIAL  INSTRUCOES  README.md  mainpage.dox
vss/msg/: detectedObjects.msg  pos.msg
vss/scene/: vss.ttt
vss/src/: Subscriber  documentacao
vss/src/arducom/: main.cpp
vss/src/controle/: fut.cpp  main.cpp
vss/src/detectObject/: multipleObjectTracking.cpp  robot.cpp  robot.hpp
vss/src/estrategia/: exec  fila.hpp  makefile  pos_campo.txt  predicao_bola.cpp  previsao_bola.cpp  wavefront.cpp
vss/src/interface/: ARMarkers.h  show.cpp
vss/src/simulador/: estrategia.hpp  funcoes.cpp  orientacao.h  simulador.cpp
